# django-compose-tags

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
compose_tags/: node.py  tag.py
compose_tags/templatetags/: compose.py
django_compose_tag/: __init__.py  apps.py  library.py  node.py  template.py
django_compose_tag/templatetags/: compose.py
tests/: conftest.py  test_compose.py
tests/templates/: composed.html  composed_array.html  from_context.html  two_slots.html
tests/templates/autotest/: expect_children.html  expect_compose_csrf.html  expect_composition_args.html  expect_composition_takes_context.html  expect_context_variable_parameter.html  expect_deep_slot.html  expect_define.html  expect_define_for.html  expect_define_for_empty.html  expect_html_tag.html  expect_slot.html  expect_slot_array_for.html  expect_slot_boundary.html  expect_string_parameter.html  expect_takes_context_has_children.html  expect_takes_context_has_kwargs.html  test_children.html  test_composition_args.html  test_composition_auto_name.html  test_composition_children.html  test_composition_csrf.html  test_composition_kwargs.html  test_composition_takes_context.html  test_context_variable_parameter.html  test_deep_slot.html  test_define.html  test_define_for.html  test_define_for_empty.html  test_html_tag.html  test_isolated_context.html  test_slot.html  test_slot_array.html  test_slot_array_for.html  test_slot_array_lonely.html  (+5 more)
tests/templatetags/: composition_test.py
(+18 files in other folders)
