[metadata]
license_file = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict-markers -ra

[isort]
skip=.tox
profile=black
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django
known_first_party=django_compose_tags,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = compose_tags/*,tests/*
branch = 1

[coverage:report]
include = compose_tags/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError